--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "GDScript/Exports/Exports.md",
+            "file": "GDScript/Basics/Flow Control/Match.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "GDScript/Basics/Flow Control/Match.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "GDScript/Basics/Flow Control/Match.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "GDScript/Exports/Exports.md"
+                "file": "GDScript/Basics/Flow Control/Match.md"
               }
             }
           }
@@ -128,8 +128,10 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "cceb9492bcd4124e",
+  "active": "e6a7319dd2fa395c",
   "lastOpenFiles": [
+    "GDScript/Classes/Inheritence.md",
+    "GDScript/Exports/Exports.md",
     "GDScript/Exports/Advanced Exports.md",
     "GDScript/Exports/Exporting Properties.md",
     "GDScript/Basics/Signals.md",
@@ -137,8 +139,6 @@
     "GDScript/Basics/Keywords.md",
     "GDScript/Basics/Constants.md",
     "GDScript/Classes/Inner Classes.md",
-    "GDScript/Classes/Class Constructor.md",
-    "GDScript/Properties/Properties.md",
-    "GDScript/Properties/Setter and Getters (aka Properties).md"
+    "GDScript/Classes/Class Constructor.md"
   ]
 }
