--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -9,7 +9,19 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "GDScript/Exports/Exports.md",
+            "file": "CSharp Features.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "9cee078ee2d6104a",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "CSharp Preprocessor Defines.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +89,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "CSharp Preprocessor Defines.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +106,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "CSharp Preprocessor Defines.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +129,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "GDScript/Exports/Exports.md"
+                "file": "CSharp Preprocessor Defines.md"
               }
             }
           }
@@ -128,17 +140,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "e6a7319dd2fa395c",
+  "active": "9cee078ee2d6104a",
   "lastOpenFiles": [
+    "CSharp Features.md",
+    "CSharp Signals.md",
+    "[.md",
+    "Math/Math.md",
+    "GDScript/Exports/Exports.md",
     "GDScript/Exports/Exporting Properties.md",
     "GDScript/Exports/Advanced Exports.md",
     "GDScript/Basics/Flow Control/Match.md",
     "GDScript/Basics/Casting.md",
-    "Style Guide/Style Guide - Naming Conventions.md",
-    "Style Guide/GDScript Style Guide.md",
-    "GDScript/Assert.md",
-    "GDScript/Tool Mode.md",
-    "GDScript/Basics/Constants.md",
-    "GDScript/Basics/Enums.md"
+    "Style Guide/Style Guide - Naming Conventions.md"
   ]
 }
