--- a/Refactored Project/Refactored Project.csproj
+++ b/Refactored Project/Refactored Project.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Godot.NET.Sdk/3.3.0">
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
-    <RootNamespace>RefactoredProject</RootNamespace>
+    <RootNamespace>Game</RootNamespace>
   </PropertyGroup>
 </Project>
