--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Godot CSharp/CSharp Language Support.md",
+            "file": "Unity Math API.md",
             "mode": "source",
             "source": false
           }
@@ -61,7 +61,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 371.49999809265137
+    "width": 371.49999809265137,
+    "collapsed": true
   },
   "right": {
     "id": "0eb67192b2bfd2a3",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Godot CSharp/CSharp Language Support.md",
+                "file": "Unity Math API.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Godot CSharp/CSharp Language Support.md",
+                "file": "Unity Math API.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +118,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Godot CSharp/CSharp Language Support.md"
+                "file": "Unity Math API.md"
               }
             }
           }
@@ -131,16 +132,15 @@
   },
   "active": "e58965101e239794",
   "lastOpenFiles": [
+    "Godot CSharp/CSharp Language Support.md",
+    "Unity Math API.md",
     "Godot CSharp/CSharp Features.md",
     "GDScript/START HERE/GDScript.md",
     "Godot CSharp/CSharp Export keyword.md",
     "Godot CSharp/CSharp Preprocessor Defines.md",
     "Godot CSharp/CSharp Yield.md",
-    "Godot CSharp/CSharp Export keyword.md",
     "GDScript/Exports/Advanced Exports.md",
-    "Godot CSharp/CSharp Language Support.md",
     "Godot CSharp/CSharp Signals.md",
-    "Godot CSharp/CSharp Strings.md",
-    "Godot CSharp/CSharp Singletons.md"
+    "Godot CSharp/CSharp Strings.md"
   ]
 }
