found some godot plugins that i want to try, added them to docs

--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Unity Math API.md",
+            "file": "Godot Plugins to Try.md",
             "mode": "source",
             "source": false
           }
@@ -78,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Unity Math API.md",
+                "file": "Godot Plugins to Try.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Unity Math API.md",
+                "file": "Godot Plugins to Try.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -118,7 +118,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Unity Math API.md"
+                "file": "Godot Plugins to Try.md"
               }
             }
           }
@@ -132,8 +132,8 @@
   },
   "active": "e58965101e239794",
   "lastOpenFiles": [
-    "Godot CSharp/CSharp Language Support.md",
     "Unity Math API.md",
+    "Godot CSharp/CSharp Language Support.md",
     "Godot CSharp/CSharp Features.md",
     "GDScript/START HERE/GDScript.md",
     "Godot CSharp/CSharp Export keyword.md",
