added tags to docs

--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -4,32 +4,20 @@
     "type": "split",
     "children": [
       {
-        "id": "e6a7319dd2fa395c",
+        "id": "a58b3a0ebc3ed0b7",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "CSharp Preprocessor Defines.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "cdf1ad88cb603b2e",
-        "type": "leaf",
-        "state": {
-          "type": "empty",
+          "type": "graph",
           "state": {}
         }
       },
       {
-        "id": "9cee078ee2d6104a",
+        "id": "9956827a2f641ff4",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "CSharp Preprocessor Defines.md",
+            "file": "GDScript/START HERE/GDScript.md",
             "mode": "source",
             "source": false
           }
@@ -60,7 +48,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#godot",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -81,7 +69,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 372.5
+    "width": 371.49999809265137
   },
   "right": {
     "id": "0eb67192b2bfd2a3",
@@ -97,7 +85,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "CSharp Preprocessor Defines.md",
+                "file": "GDScript/START HERE/GDScript.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -114,7 +102,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "CSharp Preprocessor Defines.md",
+                "file": "GDScript/START HERE/GDScript.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -137,28 +125,29 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "CSharp Preprocessor Defines.md"
+                "file": "GDScript/START HERE/GDScript.md"
               }
             }
           }
-        ]
+        ],
+        "currentTab": 2
       }
     ],
     "direction": "horizontal",
     "width": 300,
     "collapsed": true
   },
-  "active": "e6a7319dd2fa395c",
+  "active": "a58b3a0ebc3ed0b7",
   "lastOpenFiles": [
+    "Best Practices/Scene Organization.md",
+    "GDScript/START HERE/GDScript.md",
     "CSharp Features.md",
-    "[.md",
-    "CSharp Preprocessor Defines.md",
+    "Best Practices/Godot Interfaces.md",
     "CSharp Signals.md",
-    "Math/Math.md",
-    "GDScript/Exports/Exports.md",
-    "GDScript/Exports/Exporting Properties.md",
-    "GDScript/Exports/Advanced Exports.md",
-    "GDScript/Basics/Flow Control/Match.md",
-    "GDScript/Basics/Casting.md"
+    "CSharp Preprocessor Defines.md",
+    "Godot to Unity API Converter/Need to Convert.md",
+    "Godot to Unity API Converter/Unity Math API.md",
+    "Godot Plugins to Try.md",
+    "Godot CSharp/CSharp Language Support.md"
   ]
 }
