playing with code :(

--- a/Refactored Project/Refactored Project.csproj
+++ b/Refactored Project/Refactored Project.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>net472</TargetFramework>
     <RootNamespace>Game</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
+  </ItemGroup>
 </Project>
