--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -4,20 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "a58b3a0ebc3ed0b7",
-        "type": "leaf",
-        "state": {
-          "type": "graph",
-          "state": {}
-        }
-      },
-      {
-        "id": "9956827a2f641ff4",
+        "id": "ac8569dc51104e29",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "GDScript/START HERE/GDScript.md",
+            "file": "Godot Plugins.md",
             "mode": "source",
             "source": false
           }
@@ -85,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "GDScript/START HERE/GDScript.md",
+                "file": "Godot Plugins.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -102,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "GDScript/START HERE/GDScript.md",
+                "file": "Godot Plugins.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -125,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "GDScript/START HERE/GDScript.md"
+                "file": "Godot Plugins.md"
               }
             }
           }
@@ -137,17 +129,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a58b3a0ebc3ed0b7",
+  "active": "ac8569dc51104e29",
   "lastOpenFiles": [
-    "Style Guide/Style Guide - Blank lines.md",
+    "Godot Plugins - Language Converters.md",
+    "Godot Plugins.md",
+    "TODOs.md",
+    "Rule Tile Automation Idea.md",
+    "Ink.md",
     "GDScript/START HERE/GDScript.md",
+    "Style Guide/Style Guide - Blank lines.md",
     "Best Practices/Scene Organization.md",
     "CSharp Features.md",
-    "Best Practices/Godot Interfaces.md",
-    "CSharp Signals.md",
-    "CSharp Preprocessor Defines.md",
-    "Godot to Unity API Converter/Need to Convert.md",
-    "Godot to Unity API Converter/Unity Math API.md",
-    "Godot Plugins to Try.md"
+    "Best Practices/Godot Interfaces.md"
   ]
 }
