--- a/Steam Eagles GDD/.obsidian/workspace
+++ b/Steam Eagles GDD/.obsidian/workspace
@@ -1,33 +1,29 @@
 {
   "main": {
-    "id": "4217cbefe4d7ae53",
+    "id": "36b984acdeee0fff",
     "type": "split",
     "children": [
       {
-        "id": "ac8569dc51104e29",
+        "id": "8a38d4d46d0f0208",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Godot Plugins.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
     "direction": "vertical"
   },
   "left": {
-    "id": "3b3a17083a1f0671",
+    "id": "9dd7ae5a5f3d1f98",
     "type": "split",
     "children": [
       {
-        "id": "8ecde478ec518da7",
+        "id": "ba0d917440d0b3be",
         "type": "tabs",
         "children": [
           {
-            "id": "cceb9492bcd4124e",
+            "id": "785427f5d27fc18d",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -35,12 +31,12 @@
             }
           },
           {
-            "id": "934d846ca4b2d945",
+            "id": "015cfd2628593ce2",
             "type": "leaf",
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#godot",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -50,7 +46,7 @@
             }
           },
           {
-            "id": "4a2143803d0fa19e",
+            "id": "7469bee0d15c4661",
             "type": "leaf",
             "state": {
               "type": "starred",
@@ -61,48 +57,45 @@
       }
     ],
     "direction": "horizontal",
-    "width": 371.49999809265137,
-    "collapsed": true
+    "width": 364.49999809265137
   },
   "right": {
-    "id": "0eb67192b2bfd2a3",
+    "id": "8a38a164ca04acdb",
     "type": "split",
     "children": [
       {
-        "id": "a5f63a86a8e754ae",
+        "id": "2043593bae7fe751",
         "type": "tabs",
         "children": [
           {
-            "id": "d1e13e4034e0ee43",
+            "id": "b280b1b6c0c0770a",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Godot Plugins.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
                 "backlinkCollapsed": false,
-                "unlinkedCollapsed": false
+                "unlinkedCollapsed": true
               }
             }
           },
           {
-            "id": "e566b56bed49af16",
+            "id": "8c9a2af02b07ede0",
             "type": "leaf",
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Godot Plugins.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
             }
           },
           {
-            "id": "972ea815db34bf2f",
+            "id": "d3c8f2276ca3bc6d",
             "type": "leaf",
             "state": {
               "type": "tag",
@@ -113,34 +106,30 @@
             }
           },
           {
-            "id": "2e4e1cd73317c397",
+            "id": "3dddae2ac51d4056",
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "Godot Plugins.md"
-              }
+              "state": {}
             }
           }
-        ],
-        "currentTab": 2
+        ]
       }
     ],
     "direction": "horizontal",
     "width": 300,
     "collapsed": true
   },
-  "active": "ac8569dc51104e29",
+  "active": "785427f5d27fc18d",
   "lastOpenFiles": [
-    "Godot Plugins - Language Converters.md",
-    "Godot Plugins.md",
-    "TODOs.md",
-    "Rule Tile Automation Idea.md",
-    "Ink.md",
-    "GDScript/START HERE/GDScript.md",
-    "Style Guide/Style Guide - Blank lines.md",
-    "Best Practices/Scene Organization.md",
-    "CSharp Features.md",
-    "Best Practices/Godot Interfaces.md"
+    "README - Steam Eagles GDD.md",
+    "Untitled.md",
+    "assets/templates/Development Iteration Min (Template) .md",
+    "assets/templates/Development Iteration (Template).md",
+    "assets/templates/Idea Note (Template).md",
+    "assets/templates/Minimal Note (Template).md",
+    "assets/templates/Section README (Template).md",
+    "Game Design Document/Art.md",
+    "Game Design Document/Aesthetics/Sounds.md"
   ]
 }
