--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -4,24 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "ac8569dc51104e29",
+        "id": "f153ec80e98c7ea3",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "GDScript/Exports/Advanced Exports.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "3e0f7881cd1a4206",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "GDScript/Exports/Exports.md",
+            "file": "Godot Unit Testing.md",
             "mode": "source",
             "source": false
           }
@@ -69,8 +57,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -90,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "Godot Unit Testing.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "Godot Unit Testing.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -130,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "GDScript/Exports/Exports.md"
+                "file": "Godot Unit Testing.md"
               }
             }
           }
@@ -142,17 +129,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "3e0f7881cd1a4206",
+  "active": "f153ec80e98c7ea3",
   "lastOpenFiles": [
-    "GDScript/Exports/Advanced Exports.md",
     "Godot Plugins.md",
-    "Godot Plugins - Language Converters.md",
-    "TODOs.md",
-    "Rule Tile Automation Idea.md",
+    "Godot Unit Testing.md",
     "Ink.md",
-    "GDScript/START HERE/GDScript.md",
-    "Style Guide/Style Guide - Blank lines.md",
-    "Best Practices/Scene Organization.md",
-    "CSharp Features.md"
+    "Images/watermap_demo_1 1.gif",
+    "Images/Pasted image 20220913235758.png",
+    "GDScript/Exports/Advanced Exports.md",
+    "Godot Plugins - Language Converters.md",
+    "GDScript/Exports/Exports.md",
+    "TODOs.md",
+    "Rule Tile Automation Idea.md"
   ]
 }
