--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Godot Unit Testing.md",
+            "file": "CSharp/CSharp Exports.md",
             "mode": "source",
             "source": false
           }
@@ -61,7 +61,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 371.49999809265137
+    "width": 371.49999809265137,
+    "collapsed": true
   },
   "right": {
     "id": "0eb67192b2bfd2a3",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Godot Unit Testing.md",
+                "file": "CSharp/CSharp Exports.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Godot Unit Testing.md",
+                "file": "CSharp/CSharp Exports.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +118,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Godot Unit Testing.md"
+                "file": "CSharp/CSharp Exports.md"
               }
             }
           }
@@ -131,15 +132,15 @@
   },
   "active": "f153ec80e98c7ea3",
   "lastOpenFiles": [
-    "Godot Plugins.md",
-    "Godot Unit Testing.md",
-    "Ink.md",
-    "Images/watermap_demo_1 1.gif",
-    "Images/Pasted image 20220913235758.png",
     "GDScript/Exports/Advanced Exports.md",
-    "Godot Plugins - Language Converters.md",
-    "GDScript/Exports/Exports.md",
-    "TODOs.md",
-    "Rule Tile Automation Idea.md"
+    "CSharp/CSharp Exports.md",
+    "CSharp/Differences between CSharp and Gdscript.md",
+    "CSharp/CSharp Features.md",
+    "CSharp/CSharp Signals.md",
+    "CSharp/CSharp Preprocessor Defines.md",
+    "Plugins/Godot Unit Testing.md",
+    "Plugins/Godot Plugins.md",
+    "Plugins/Ink.md",
+    "Images/watermap_demo_1 1.gif"
   ]
 }
