--- a/Steam Eagles GDD/.obsidian/workspace
+++ b/Steam Eagles GDD/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "6ae9ba3331ea761f",
+        "id": "29834af8cdde7ca4",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Game Design Document/Aesthetics/Aesthetics.md",
+            "file": "Dependency Stack/Block Disconnect Tool.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Game Design Document/Aesthetics/Aesthetics.md",
+                "file": "Dependency Stack/Block Disconnect Tool.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Game Design Document/Aesthetics/Aesthetics.md",
+                "file": "Dependency Stack/Block Disconnect Tool.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Game Design Document/Aesthetics/Aesthetics.md"
+                "file": "Dependency Stack/Block Disconnect Tool.md"
               }
             }
           }
@@ -126,19 +126,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
-  "active": "785427f5d27fc18d",
+  "active": "29834af8cdde7ca4",
   "lastOpenFiles": [
-    "Game Design Document/Aesthetics/Animation/Animation.md",
-    "Game Design Document/Aesthetics/Art/Art.md",
-    "Game Design Document/Aesthetics/Music/Music.md",
-    "Game Design Document/Aesthetics/Sounds/Sounds.md",
-    "Game Design Document/Aesthetics/Aesthetics.md",
-    "Steam Eagles GDD.md",
-    "Pasted Image 20220915000036_715.jpg",
-    "Excalidraw/Drawing 2022-09-14 23.58.55.excalidraw.md",
-    "assets/media/images/Transporter_Final_2.jpg",
-    "Pasted Image 20220914235921_884.jpg"
+    "Dependency Stack/Block Build Tool.md",
+    "Dependency Stack/Block Disconnect Tool.md",
+    "Dependency Stack/Tools.md",
+    "Dependency Stack/Static Block Enviornment.md",
+    "Dependency Stack/Equipped Tool.md",
+    "Dependency Stack/Gadgets.md",
+    "Dependency Stack/Gadget Input.md",
+    "Dependency Stack/Equipped Gadget.md",
+    "Dependency Stack/Equipment.md",
+    "Dependency Stack/Equipment Selection.md"
   ]
 }
