--- a/Steam Eagles GDD/.obsidian/workspace
+++ b/Steam Eagles GDD/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Dependency Stack/Block Disconnect Tool.md",
+            "file": "Dependency Stack/Block Build Tool.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Dependency Stack/Block Disconnect Tool.md",
+                "file": "Dependency Stack/Block Build Tool.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Dependency Stack/Block Disconnect Tool.md",
+                "file": "Dependency Stack/Block Build Tool.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Dependency Stack/Block Disconnect Tool.md"
+                "file": "Dependency Stack/Block Build Tool.md"
               }
             }
           }
@@ -131,8 +131,8 @@
   },
   "active": "29834af8cdde7ca4",
   "lastOpenFiles": [
-    "Dependency Stack/Block Build Tool.md",
     "Dependency Stack/Block Disconnect Tool.md",
+    "Dependency Stack/Block Build Tool.md",
     "Dependency Stack/Tools.md",
     "Dependency Stack/Static Block Enviornment.md",
     "Dependency Stack/Equipped Tool.md",
