Iteration 18: Editing the Block Tilemap

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Steam Eagles GDD/.obsidian/plugins/
 UtilityProjects/venv/
 
 Steam Eagles GDD/assets/media/images/full-size/
+
+Docs/Godot Notes/.obsidian/plugins/
