--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -4,24 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "f153ec80e98c7ea3",
+        "id": "860b5bdf3d8d0484",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "GDScript/Exports/Exporting Properties.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "75fa115054fbfe08",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "GDScript/Exports/Exports.md",
+            "file": "Cross-Language Scripting - Instantiating Nodes.md",
             "mode": "source",
             "source": false
           }
@@ -52,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tween",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -69,8 +57,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -90,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "Cross-Language Scripting - Instantiating Nodes.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "GDScript/Exports/Exports.md",
+                "file": "Cross-Language Scripting - Instantiating Nodes.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -130,29 +117,37 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "GDScript/Exports/Exports.md"
+                "file": "Cross-Language Scripting - Instantiating Nodes.md"
               }
+            }
+          },
+          {
+            "id": "114cfb8b721ab032",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
             }
           }
         ],
-        "currentTab": 2
+        "currentTab": 4
       }
     ],
     "direction": "horizontal",
     "width": 300,
     "collapsed": true
   },
-  "active": "934d846ca4b2d945",
+  "active": "860b5bdf3d8d0484",
   "lastOpenFiles": [
-    "GDScript/Exports/Exporting Properties.md",
-    "GDScript/Exports/Advanced Exports.md",
-    "CSharp/CSharp Exports.md",
+    "Cross-Language Scripting.md",
+    "Cross-Langauge Scripting - Fields.md",
+    "Cross-Language Scripting - Calling Methods.md",
+    "tiles.png",
+    "Creating Script Templates.md",
+    "Cross-Language Scripting - Instantiating Nodes.md",
     "CSharp/Differences between CSharp and Gdscript.md",
-    "CSharp/CSharp Features.md",
-    "CSharp/CSharp Signals.md",
-    "CSharp/CSharp Preprocessor Defines.md",
-    "Plugins/Godot Unit Testing.md",
-    "Plugins/Godot Plugins.md",
-    "Plugins/Ink.md"
+    "GDScript/Exports/Exports.md",
+    "GDScript/Exports/Exporting Properties.md",
+    "GDScript/Exports/Advanced Exports.md"
   ]
 }
